fix: Prevent chapter parallax problem on iOS devices Card: https://app.clickup.com/t/86c0nva73

--- a/src/styles/globals/_chapter.css
+++ b/src/styles/globals/_chapter.css
@@ -281,6 +281,13 @@
     background-attachment: var(--chapter-attachment-type);
 }
 
+@supports (-webkit-touch-callout: none) {
+    /* iOS-specific styles */
+    .chapter[has-background-media] {
+        --chapter-attachment-type: scroll;
+    }
+}
+
 @container (width >= 480px) {
     .chapter[has-background-media] {
         --chapter-bg-current-image: var(--chapter-bg-image-tablet);
